--- a/task10.html
+++ b/task10.html
@@ -15,19 +15,8 @@
 
     <style>
         body { font-family: sans-serif; margin:0; padding:0; }
-        #map {
-        height: 700px;  
-        width: 90%;           
-        margin: 20px auto;   
-        display: block;      
-        }
-        #chart svg {
-        display: block;
-        margin: auto;
-        max-width: 100%; 
-        height: 700px;  
-        width: 100%; 
-        }
+        #map { height: 700px; width: 90%; margin: 20px auto; display: block; }
+        #chart svg { display: block; margin: auto; max-width: 100%; height: 700px; width: 100%; }
         .loading { text-align:center; font-size:18px; padding:20px; }
     </style>
 
