Fixed layout issues

--- a/task11.html
+++ b/task11.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -29,7 +30,7 @@
         
     </head>
     <body>
-        <div class = "container"></div>
+        <div class = "container">
             <h1>Task 11: EV Adoption and Clean Electricity</h1>
             <div id="controls">
                 <label for="yearSelect"><b>Select Year:</b></label>
